[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishu-tools"
dynamic = ["version"]
description = "飞书非官方 Python SDK，支持多维表格 (Bitable) 和文档 (Doc) API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["feishu", "lark", "bitable", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.20, <3.0",
]

[tool.hatch.version]
path = "feishu_tools/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["feishu_tools"]

[project.urls]
Documentation = "https://open.feishu.cn/document/home/index"
