[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishukit"
dynamic = ["version"]
description = "飞书非官方 Python SDK，支持多维表格 (Bitable)、文档 (Doc) 和云空间 (Driver) API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["feishu", "lark", "bitable", "doc", "driver", "sdk"]
authors = [
    { name = "cafe_tea" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.20, <3.0",
]

[tool.hatch.version]
path = "feishukit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["feishukit"]

[project.urls]
"Feishu Open Platform" = "https://open.feishu.cn/document/home/index"
